--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "stylelint": "^13.13.1",
     "stylelint-config-recommended": "^5.0.0",
     "stylelint-config-standard": "^22.0.0",
+    "svg-sprite-loader": "^6.0.9",
     "typescript": "~4.1.5",
     "webpack-bundle-analyzer": "^4.4.2"
   },
