--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint:markup": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "axios": "^0.21.4",
     "core-js": "^3.6.5",
     "register-service-worker": "^1.7.1",
     "vant": "^3.2.2",
@@ -32,6 +33,7 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-standard": "^5.1.2",
     "@vue/eslint-config-typescript": "^7.0.0",
+    "@vueuse/core": "^6.4.1",
     "amfe-flexible": "^2.2.1",
     "babel-plugin-import": "^1.13.3",
     "eslint": "^7.32.0",
@@ -47,6 +49,7 @@
     "prettier": "^2.4.0",
     "sass": "^1.39.2",
     "sass-loader": "^10.1.1",
+    "secure-ls": "^1.2.6",
     "stylelint": "^13.13.1",
     "stylelint-config-recommended": "^5.0.0",
     "stylelint-config-standard": "^22.0.0",
