--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
      "moduleResolution": "node",
     "skipLibCheck": true,
      "esModuleInterop": true,
-     "allowSyntheticDefaultImports": false,
+     "allowSyntheticDefaultImports": true,
      "sourceMap": true,
      "baseUrl": ".",
      "types": [
