--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@vueuse/core": "^6.4.1",
     "amfe-flexible": "^2.2.1",
     "babel-plugin-import": "^1.13.3",
+    "compression-webpack-plugin": "5.0.1",
     "eslint": "^7.32.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
