--- a/.env.release
+++ b/.env.release
@@ -1,7 +1,6 @@
-# 只在开发模式中被载入
-
 # 全局环境变量
-VUE_GLOBAL_ENV = 'release'
+NODE_ENV = "production"
+VUE_APP_GLOBAL_ENV = 'release'
 
 # 网站前缀
 BASE_URL = /piece/
