--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^7.17.0",
     "husky": "^7.0.2",
+    "image-webpack-loader": "^7.0.1",
     "lint-staged": "^11.1.2",
     "postcss-pxtorem": "5.1.1",
     "prettier": "^2.4.0",
