--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "image-webpack-loader": "^7.0.1",
     "lint-staged": "^11.1.2",
     "postcss-pxtorem": "5.1.1",
+    "prerender-spa-plugin": "3.4.0",
     "prettier": "^2.4.0",
     "sass": "^1.39.2",
     "sass-loader": "^10.1.1",
@@ -57,6 +58,7 @@
     "stylelint-config-standard": "^22.0.0",
     "svg-sprite-loader": "^6.0.9",
     "typescript": "~4.1.5",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack-bundle-analyzer": "^4.4.2"
   },
   "husky": {
