--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "svg-sprite-loader": "^6.0.9",
     "typescript": "~4.1.5",
     "uglifyjs-webpack-plugin": "^2.2.0",
+    "vue-skeletor": "^1.0.6",
     "webpack-bundle-analyzer": "^4.4.2"
   },
   "husky": {
